fieldx/tests/uncompilable/stable+async-lock,clonable-lock/deserialize_off.stderr
error: feature 'sync' is required
 --> tests/uncompilable/deserialize_off.rs
  |
  | #[fxstruct(sync, serde(deserialize(off)))]
  |            ^^^^

error: feature 'serde' is required
 --> tests/uncompilable/deserialize_off.rs
  |
  | #[fxstruct(sync, serde(deserialize(off)))]
  |                  ^^^^^

warning: unused import: `serde::Deserialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::Deserialize;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde::Serialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^
